src/objects/Question_Response__c.object
<CustomObject>
    <description>Junction object between requirement response and question.</description>
    <fields>
        <fullName>City__c</fullName>
        <description>City for address fields.</description>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Country value for address fields.</description>
        <label>Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsComplete__c</fullName>
        <formula>IsPopulated__c == true || IsShown__c == false || IsRequired__c == false</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsComplete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsPopulated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsPopulated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsRequired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsShown__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsShown</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PopulatedOn__c</fullName>
        <description>The date/time that IsPopulated was set to true</description>
        <inlineHelpText>The date/time that IsPopulated was set to true</inlineHelpText>
        <label>PopulatedOn</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PostalCode__c</fullName>
        <description>Postal code for address fields.</description>
        <label>Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Question that this response is for.</description>
        <label>Question</label>
        <referenceTo>Question__c</referenceTo>
        <relationshipLabel>Question Responses</relationshipLabel>
        <relationshipName>Question_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requirement_Response__c</fullName>
        <description>Requirement response this question response is for.</description>
        <label>Requirement Response</label>
        <referenceTo>Requirement_Response__c</referenceTo>
        <relationshipLabel>Question Responses</relationshipLabel>
        <relationshipName>Question_Responses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>State value for address fields.</description>
        <label>State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <description>Value of the street field for addresses.</description>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ValueCheckbox__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox value.</description>
        <label>Value Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ValueCurrency__c</fullName>
        <description>Currency value for this response.</description>
        <label>Value Currency</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ValueDateTime__c</fullName>
        <description>DateTime value for this response.</description>
        <label>Value Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ValueDate__c</fullName>
        <description>Date value for this response.</description>
        <label>Value Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ValueEmail__c</fullName>
        <description>Email value of this response.</description>
        <label>Value Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ValueLongTextArea__c</fullName>
        <description>Long text area value for this response.</description>
        <label>Value Long Text Area</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ValueNumber__c</fullName>
        <description>Number value for this response.</description>
        <label>Value Number</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ValuePercent__c</fullName>
        <description>Percent value for this response.</description>
        <label>Value Percent</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ValuePhone__c</fullName>
        <description>Phone value of this response.</description>
        <label>Value Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ValueTextArea__c</fullName>
        <description>Text area value for this response.</description>
        <label>Value Text Area</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ValueTextEncrypted__c</fullName>
        <description>Encrypted text value for this field.</description>
        <label>Value Text Encrypted</label>
        <length>175</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ValueText__c</fullName>
        <description>Text value for this response.</description>
        <label>Value Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ValueURL__c</fullName>
        <description>URL value for this response.</description>
        <label>Value URL</label>
        <type>Url</type>
    </fields>
    <label>Question Response</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>State__c</columns>
        <columns>Street__c</columns>
        <columns>City__c</columns>
        <columns>Country__c</columns>
        <columns>IsPopulated__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>QR-{0000000}</displayFormat>
        <label>Question Response Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Question Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>